<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<Button android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:id="@+id/btnBack"
		android:text="@string/btnBack" />
	<TextView xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/partner_name" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/partner_name" />
	<TextView xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/partner_percentage" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/partner_percentage" />
	<TextView xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/partner_phone" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/partner_phone" />
	<TextView xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/partner_email" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/partner_email" />
	<TextView xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/partner_url" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/partner_url" />
</LinearLayout>