<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<TextView xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/settings_url" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/settings_url" />
	<EditText android:id="@+id/edit_url" android:layout_width="fill_parent"
		android:layout_height="wrap_content" />

	<TextView xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/settings_password" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/settings_password" />
	<EditText android:id="@+id/edit_password"
		android:layout_width="fill_parent" android:layout_height="wrap_content" />

	<Button android:id="@+id/btnSave" android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:gravity="center_horizontal" android:text="@string/btnSave" />
</LinearLayout>